# BlockCraft

./: .gitignore  .gitmodules  MinecraftProject.sln  README.md
BlockGame/: CMakeSettings.json  CmakeLists.txt
BlockGame/Engine/: CmakeLists.txt  engine.h
BlockGame/Engine/Core/: CmakeLists.txt  EntryPoint.cpp
BlockGame/Engine/Core/src/: EntryPoint.cpp
BlockGame/Engine/src/: camera.cpp  camera.h  core.h  input.cpp  input.h  noise.h  profiler.h  renderer.cpp  renderer.h  simplerenderer.cpp  simplerenderer.h  textureatlas.cpp  textureatlas.h  time.cpp  time.h  window.cpp  window.h
BlockGame/game/src/: entrypoint.cpp  main.cpp
BlockGame/game/src/gameplay/: game.cpp  game.h  player.cpp  player.h  spectatorcameracontroller.cpp  spectatorcameracontroller.h
BlockGame/game/src/physics/: collision..cpp  collision.h
BlockGame/game/src/rendering/: block.cpp  block.h  blocktexturelibrary.h  chunk.cpp  chunk.h  spectatorcameracontroller.cpp  world.cpp  world.h
BlockGame/game/src/rendering/block/: block.cpp  block.h  blocktexturelibrary.cpp  blocktexturelibrary.h  blocktlibrary.cpp  blocktlibrary.h
BlockGame/game/src/rendering/camera/: spectatorcamera.cpp  spectatorcamera.h  spectatorcameracontroller.h
BlockGame/game/src/rendering/world/: chunk.cpp  chunk.h  world.cpp  world.h
Minecraft/: CMakeLists.txt  CMakeSettings.json  Minecraft.cpp  Minecraft.h
